infrastructure/team-a/gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  labels:
    istio: ingressgateway
    gateway.io/name: team-a-gateway
  name: team-a-gateway
  namespace: team-a
spec:
  gatewayClassName: istio
  listeners:
    - name: mcp
      hostname: 'team-a.mcp.127-0-0-1.sslip.io'
      port: 8080
      protocol: HTTP
      allowedRoutes:
        namespaces:
          from: Same
    - name: mcp-https
      hostname: 'team-a.mcp.127-0-0-1.sslip.io'
      port: 8443
      protocol: HTTPS
      tls:
        mode: Terminate
        certificateRefs:
          - name: team-a-gateway-mcp-https-tls
      allowedRoutes:
        namespaces:
          from: Same
    - name: mcps
      port: 8080
      protocol: HTTP
      hostname: '*.mcp.local'
      allowedRoutes:
        namespaces:
          from: Same
